--- a/Project_Demos/03.Microservices-ConfigConsumer/pom.xml
+++ b/Project_Demos/03.Microservices-ConfigConsumer/pom.xml
@@ -38,6 +38,12 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-config</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-bootstrap</artifactId>
+			<version>3.0.2</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -55,6 +61,7 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
+			
 
 		</dependencies>
 	</dependencyManagement>
