--- a/Project_Demos/16.Miicroservices-Couponservice-EC2-Docker/src/main/resources/application.properties
+++ b/Project_Demos/16.Miicroservices-Couponservice-EC2-Docker/src/main/resources/application.properties
@@ -1,10 +1,5 @@
-spring.datasource.url=jdbc:mysql://mydb.ck6tkrmiljhm.us-east-2.rds.amazonaws.com:3306/mysqldb
+spring.datasource.url=jdbc:mysql://docker-mysql:3306/mydb
 spring.datasource.username=root
 spring.datasource.password=password
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 
-server.port= 5000
-spring.jpa.properties.max_allowed_packet=2000
-
+server.port= 9091
