--- a/Project_Demos/17.Miicroservices-Productservice-EC2-Docker/pom.xml
+++ b/Project_Demos/17.Miicroservices-Productservice-EC2-Docker/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.crescent</groupId>
-	<artifactId>17.Miicroservices-Productservice-EC2-Docker</artifactId>
-	<version>0.0.1</version>
-	<name>productservice</name>
-	<description>product service</description>
+	<artifactId>productservice</artifactId>
+	<version>1.0</version>
+	<name>17.Miicroservices-Productservice-EC2-Docker</name>
+	<description>17.Miicroservices-Productservice-EC2-Docker</description>
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
