--- a/Project_Demos/17.Miicroservices-Productservice-EC2-Docker/src/main/resources/application.properties
+++ b/Project_Demos/17.Miicroservices-Productservice-EC2-Docker/src/main/resources/application.properties
@@ -1,9 +1,7 @@
-spring.datasource.url=jdbc:mysql://mydb.ck6tkrmiljhm.us-east-2.rds.amazonaws.com:3306/mysqldb
+spring.datasource.url=jdbc:mysql://docker-mysql:3306/mydb
 spring.datasource.username=root
 spring.datasource.password=password
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+server.port=9090
 
-server.port=5000
-couponService.url=http://couponservice-env-1.eba-4xhmqdcp.us-east-2.elasticbeanstalk.com/couponapi/coupons/
+couponService.url = http://coupon-app:9091/couponapi/coupons
