--- a/Project_Demos/17.Miicroservices-Productservice-EC2-Docker/src/main/resources/application.properties
+++ b/Project_Demos/17.Miicroservices-Productservice-EC2-Docker/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:mysql://docker-mysql:3306/mydb
 spring.datasource.username=root
 spring.datasource.password=password
-
+spring.jpa.hibernate.ddl-auto=update
 server.port=9090
 
-couponService.url = http://coupon-app:9091/couponapi/coupons
+couponService.url = http://coupon-app:9091/couponapi/coupons/
